[package]
name = "food_bot"
version = "0.1.0"
authors = ["Patsakula Nikita <patsakula.n@granit-concern.ru>"]
edition = "2018"

[dependencies]
teloxide = { version = "0.4", features = ["macros", "auto-send"] }
teloxide-macros = "0.4"

log = "0.4"
pretty_env_logger = "0.4"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7"

